--- a/style.css
+++ b/style.css
@@ -78,14 +78,14 @@ section.imagem > p {
     text-shadow: 1px 2px 0px black;
 }
 
-section#img01 {
+section#imagem01 {
     background-image: url('imagens/background001.jpg');
     background-position: right center;
     background-size: cover;
 }
 
-section#img02 {
-    background-image: url('../desafio12/imagens/background002.jpg');
+section#imagem02 {
+    background-image: url('imagens/background002.jpg');
     background-position: right center;
     background-size: cover;
 }
