--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,13 +79,13 @@ section.imagem > p {
 }
 
 section#imagem01 {
-    background-image: url('imagens/background001.jpg');
+    background-image: url('../imagens/background001.jpg');
     background-position: right center;
     background-size: cover;
 }
 
 section#imagem02 {
-    background-image: url('imagens/background002.jpg');
+    background-image: url('../imagens/background002.jpg');
     background-position: right center;
     background-size: cover;
 }
